[workspace]
resolver = "2"
members = [ 
    "app", 
    "engine", 
    "renderer",
]

[workspace.dependencies.engine]
path = "engine"

[workspace.dependencies.renderer]
path = "renderer"

[workspace.dependencies]
hashbrown = "0.15.1"
hecs = "0.10.5"
rayon = "1.10.0"
vulkano = "0.34.1"
winit = { version = "0.30.8", features = ["rwh_05"] }
